✨ Change lightmode colors

--- a/src/app.css
+++ b/src/app.css
@@ -51,11 +51,11 @@ h1 {
 	}
 
 	.wrapper {
-		background: #f6e58d;
+		background: #2C3E50;
 	}
 
 	p, h1, label {
-		color: #ffbe76;
+		color: #fff;
 	}
 }
 
